--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^3.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.15.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
